--- a/HomepageStyle.css
+++ b/HomepageStyle.css
@@ -12,7 +12,7 @@ html, body {
   position: relative;
   width: 100%;
   height: 100%;
-  background: url('alex-42193-unsplash.jpg') center center no-repeat;
+  background: url('253201.jpg') center center no-repeat;
   background-size: cover;
   
   &:before {
@@ -31,7 +31,6 @@ html, body {
   height: 50px;
 }
 ul{
-  float: left;
   list-style-type: none;
   margin-top: 15px;
 }
@@ -45,4 +44,23 @@ ul li a:hover{
   background-color: white;
   color: black;
   text-decoration: none;
+  border:none;
+}
+#cm{
+  color:orange;
+  font-size: 50px;
+  border:2px solid black;
+}
+#cr{
+  margin-left: 32%;
+  margin-top: 17%;
+}
+#logo{
+  color:cyan;
+}
+#nav{
+  background-color: white;
+  border:none;
+  color:black;
+  transition: 0.6s ease;
 }
