--- a/HomepageStyle.css
+++ b/HomepageStyle.css
@@ -56,11 +56,15 @@ ul li a:hover{
   margin-top: 17%;
 }
 #logo{
-  color:cyan;
+  color:#101357;
+  font-family:  Verdana;
 }
 #nav{
   background-color: white;
   border:none;
   color:black;
   transition: 0.6s ease;
+}
+#cute{
+  color: red;
 }
